# open-wave-public-benchmarks

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  dependency-review.yml  tests.yml
artifacts/: cdc_mirror_source_boundary_summary.json  nasa_power_d103_manual_reproduction_summary.json  nasa_power_d103_real_run_summary.json  noaa_coops_d131_negative_result_summary.json  nyc_tlc_phase4_negative_result_summary.json
docs/: AI_OPERATOR_PROTOCOL.md  AI_USE.md  CLAIMS.md  EVIDENCE_CARD.md  FUNDING_ALIGNMENT.md  GLOBAL_EVIDENCE_REGISTRY.md  HONESTY_MANIFESTO.md  IP_BOUNDARY.md  MANUAL_AUDIT_PROTOCOL.md  PROJECT_POSITIONING.md  REPRODUCTION.md  ROADMAP.md  USE_CASES.md
docs/evidence/: NASA_POWER_D103_EVIDENCE.md
docs/evidence_cards/: CLAIMBOUND-NASA-POWER-D103-2026-04-29.json  CLAIMBOUND-NOAA-COOPS-D131-2026-04-30.json  README.md
docs/manual_audit/: EEA_AQ_D001_AI_ASSISTED_TRACK.md  EEA_AQ_D001_MANUAL_TRACK.md
docs/protocols/: NASA_POWER_D103_PREREG_CHARTER.md
docs/registry/: evidence_index.json
scripts/: claimbound_run_nasa_power_prereg.py  claimbound_validate_evidence_card.py  fetch_nasa_power.py  openwave_run_nasa_power_prereg.py
specs/: repo_version.yaml
src/claimbound_public_benchmarks/: __init__.py  (+6 more)
tests/: test_evidence_card.py  test_nasa_power_prereg_runner.py  test_nasa_power_source_adapter.py  test_publication_guard.py
(+6 files in other folders)
