[project]
name = "claimbound-public-benchmarks"
version = "0.2.0"
description = "ClaimBound public benchmark foreground for pre-registered public time-series evaluation"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claimbound_public_benchmarks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
